# idps

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  README.md  authors.html  configure  configure.ac  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml
R/: add.R  aggregate_netCDF_files.R  axel_gdal.R  gpm_download.R  idps.R  separate_netCDF_files.R  utilities_I.R
articles/: Todo_list.html  idps.html  index.html
man/: aggregate_netCDF_files.Rd  axel_exist.Rd  gdaltranslate_exist.Rd  gpm_download.Rd  idps.Rd  separate_netCDF_files.Rd
prod/: prod_aggregate_netCDF_files.R  prod_download_GPM.R
reference/: add_Fortran.html  aggregate_netCDF_files.html  gpm_download.html  idps.html  index.html  mul_Fortran.html  pipe.html  separate_netCDF_files.html
src/: Makevars.in  Makevars.win  add_f.f90  fft_test.f95  init.c
vignettes/: Todo_list.Rmd  idps.Rmd
